# routes/user.js
@@ -3,7 +3,7 @@ const router = express.Router();
 
 
 // getting user controllers
-const { signup, login, logout, forgotPassword } = require("../controllers/userController");
+const { signup, login, logout, forgotPassword, forgotPasswordReset } = require("../controllers/userController");
 
 
 // making routes for user api
@@ -11,7 +11,7 @@ router.route("/signup").post(signup);
 router.route("/login").post(login);
 router.route("/logout").get(logout);
 router.route("/forgotpassword").post(forgotPassword);
-
+router.route("/password/reset/:token").post(forgotPasswordReset);
 
 //exporting routes
 module.exports = router;
