# swagger.yaml
@@ -131,7 +131,7 @@ paths:
       summary: Login User. Required body is of email and password. Cookie is send back.
       requestBody:
         content:
-          multipart/form-data:
+          application/json:
             schema:
               type: object
               required:
@@ -236,4 +236,67 @@ paths:
         500:
           description: Internal Server Error
 
+  /password/reset/{token}:
+    post:
+      tags: 
+        - User
+      summary: Allows user to reset password, validated based on token , send password and confirm password fields.
+      parameters:
+        - name: token
+          in: path
+          required: true
+          schema:
+            type:
+              string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - password
+                - confirmPassword
+              properties:
+                password:
+                  type: string
+                  required: true
+                confirmPassword:
+                  type: string
+                  required: true
+      responses:
+        200:
+          description: All Well And Good
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  token:
+                    type: string
+                  user:
+                    type: object
+                    properties:
+                      name: 
+                        type: string
+                      email:
+                        type: string
+                      role:
+                        type: string
+                      photo:
+                        type: object
+                        properties:
+                          id: 
+                            type: string
+                          secure_url:
+                            type: string
+                      _id: 
+                        type: string
+                      createdAt:
+                        type: string
+        400:
+          description: Bad Request
+        500:
+          description: Internal Server Error
 
